index.css
/* ... */
.photo_holder figure .photo_info span::before {
    content: '';
    display: block;
    height: 22px;
    width: 22px;
    margin: 4px;
    background-size: cover;
}

.photo_holder figure .photo_info span.photo_date::before {
    background-image: url(icon/day.svg);
}

.photo_holder figure .photo_info span.photo_people::before {
    background-image: url(icon/people.svg);
}

.photo_holder figure img {
    position: absolute;
    aspect-ratio: 1/1;
    height: 100%;
    width: 100%;
    top: 0;
    transition: left 0.2s;
}

.photo_holder figure button.shift {
    aspect-ratio: 1/1;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    height: 60px;
    width: 60px;
    border: 0;
    border-radius: 50%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 5;
    cursor: pointer;
    transition: opacity 0.15s;
}

.photo_holder figure button.shift::after {
    content: '';
    position: absolute;
    left: 50%;
    right: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
    height: 90%;
    background-size: cover;
    background-image: url(icon/arrow.svg);
}

.photo_holder figure button.left {
    left: 20px;
}

.photo_holder figure button.left::after {
    transform: translate(-50%, -50%) rotate(-180deg);
}

.photo_holder figure button.right {
    right: 20px;
}

.photo_holder figure.hide_right_button button.right, .photo_holder figure.hide_left_button button.left {
    opacity: 0;
    pointer-events: none;
}

.photo_holder figure button.photo_close {
    position: absolute;
    display: none;
    top: 4px;
    right: 4px;
    width: 30px;
    height: 30px;
    background-color: rgba(0, 0, 0, 0.5);
    background-image: url(icon/exit.svg);
    background-size: 80%;
    background-position: center;
    background-repeat: no-repeat;
    border: 0;
    border-bottom-left-radius: 8px;
    z-index: 5;
    cursor: pointer;
}

.photo_holder aside {
    display: flex;
    flex-direction: column;
    aspect-ratio: 3/5;
    height: 100%;
    width: 43.75%;
}

.photo_holder aside .photo_header {
    display: flex;
    align-items: center;
    width: calc(100% - 20px);
    height: 30px;
    padding: 10px;
    background-color: #101010;
    order: -1;
    user-select: none;
}

.photo_holder aside .inner_aside {
    height: calc(100% - 50px);
    padding-bottom: 10px;
    scrollbar-width: none;
    overflow-y: auto;
}

.photo_holder aside .photo_header .photo_location {
    display: flex;
    align-items: center;
    gap: 8px;
    flex: 1;
    font-weight: 900;
    font-size: 1.2rem;
    color: white;
}

.photo_holder aside .photo_header .photo_location::before {
    content: '';
    display: block;
    height: 30px;
    width: 30px;
    background-size: cover;
    background-image: url(icon/location.svg);
}

.photo_holder aside .photo_header button.aside_close {
    display: block;
    height: 30px;
    width: 30px;
    border: 0;
    background-color: rgba(0, 0, 0, 0);
    background-size: cover;
    background-image: url(icon/exit.svg);
    flex: 0 0 auto;
    cursor: pointer;
}

.photo_holder aside .related_pane {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 185px;
    flex-wrap: nowrap;
}

.photo_holder aside .related_pane span {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 35px;
    color: white;
    font-size: 1.1rem;
    font-weight: 900;
    user-select: none;
}

.photo_holder aside .related_pane .scroll {
    display: flex;
    gap: 10px;
    height: 150px;
    padding-left: 10px;
    padding-right: 10px;
    scrollbar-width: none;
    overflow-x: auto;
}

.photo_holder aside .related_pane .scroll figure {
    aspect-ratio: 1/1;
    min-width: 150px;
    min-height: 150px;
    user-select: none;
}

* {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-shadow: 2px 2px 4px black;
}

@media screen and (max-width: 767px) {
    .user_button:hover {
        background-color: rgba(0, 0, 0, 0);
    }

    nav.sidebar {
        width: calc(100vw - 20px);
        border-right: 0;
        transition: left 0.5s;
    }

    nav.sidebar::before {
        width: 100vw;
    }

    nav.sidebar.shift, nav.sidebar.shift::before {
        left: calc(-100vw - 20px);
    }

    .content {
        width: 100vw;
        left: 100vw;
        transition: left 0.5s;
    }

    .content.shift {
        width: 100vw;
        left: 0;
    }

    .content_frame.content_video_holder .video_scroll {
        padding-left: 10px;
        padding-right: 10px;
    }

    .photo_holder {
        position: fixed;
        top: 0;
        left: 0;
        transform: unset;
        aspect-ratio: unset;
        width: 100vw;
        height: 100dvh;
        flex-direction: column;
        border-radius: 0;
    }

    .photo_holder figure.large_figure {
        min-width: 100vw;
        min-height: 100vw;
        max-width: 100vw;
        max-height: 100vw;
    }

    .photo_holder figure.large_figure::after {
        border-bottom-left-radius: 0;
        border-top-left-radius: 0;
    }

    .photo_holder figure.large_figure .photo_info {
        border-top-left-radius: 0;
    }

    .photo_holder aside {
        aspect-ratio: unset;
        max-width: unset;
        width: 100%;
        height: calc(100dvh - 100vw);
    }

    .photo_holder aside .related_pane .scroll figure {
        height: 150px;
        width: 150px;
        border-radius: 10px;
    }

    .photo_holder aside .photo_header button.aside_close {
        display: none;
    }

    .photo_holder figure button.photo_close {
        display: block;
    }

    .photo_square {
        width: calc(50% - 20px);
    }
}

